# File-duplicate-checker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-cross.yml  build.yml
src/: database.rs  main.rs
