[package]
name = "file_duplicate_checker"
version = "5.0.10"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2018"

[dependencies]
sha2 = "0.9.1"
sqlx = { version = "0.5", features = ["sqlite", "runtime-actix-native-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.38"

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }