[package]
name = "file_duplicate_checker"
version = "6.0.0"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2018"

[dependencies]
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
xxhash-rust = { version = "^0.8.6", features = ["xxh3"] }
